--- a/_posts/2012-10-19-ubuntu-build-box2d.textile
+++ b/_posts/2012-10-19-ubuntu-build-box2d.textile
@@ -3,18 +3,19 @@ layout: post
 title: Ubuntu编译Box2D物理引擎
 description: Box2D物理引擎
 categories: [archive]
+tags: [ubuntu]
 ---
 
 <section>
     <div class="page-header">
-        <h1>一、下载Box2D物理引擎源码</h1>
+        <h3>一、下载Box2D物理引擎源码</h3>
     </div>
     <p>@https://code.google.com/p/box2d/@</p>
 </section>
 
 <section>
     <div class="page-header">
-        <h1>二、编译环境</h1>
+        <h3>二、编译环境</h3>
     </div>
 <pre>
 $ sudo apt-get install cmake libglu1-mesa-dev libxi-dev
@@ -23,19 +24,19 @@ $ sudo apt-get install cmake libglu1-mesa-dev libxi-dev
 
 <section>
     <div class="page-header">
-        <h1>三、编译，查看Building.txt帮助文件</h1>
+        <h3>三、编译，查看Building.txt帮助文件</h3>
     </div>
 <pre>
 $ cd $BOX2DPATH/Build
 $ cmake -DBOX2D_INSTALL=ON -DBOX2D_BUILD_SHARED=ON ..
 $ make
-$ sudo make install // 安装会 /usr/local/include/Box2D
+$ sudo make install // 安装到 /usr/local/include/Box2D
 </pre>
 </section>
 
 <section>
     <div class="page-header">
-        <h1>四、运行Testbed工程</h1>
+        <h3>四、运行Testbed工程</h3>
     </div>
 <pre>
 $ ./$BOX2DPATH/Build/Testbed/Testbed
