--- a/_posts/2012-11-07-cpp-overload-override-hide.textile
+++ b/_posts/2012-11-07-cpp-overload-override-hide.textile
@@ -3,11 +3,12 @@ layout: post
 title: C++的重载、覆盖、隐藏
 description: 笔记
 categories: [archive]
+tags: [c++]
 ---
 
 <section>
     <div class="page-header">
-        <h1>一、重载</h1>
+        <h3>一、重载</h3>
     </div>
     <ol>
         <li>同一个类中的函数</li>
@@ -21,13 +22,13 @@ class Test
 public:
     void post(const char* addr);
     void post(const char* addr, int port);  // 重载
-}
+};
 </pre>
 </section>
 
 <section>
     <div class="page-header">
-        <h1>二、覆盖（继承）</h1>
+        <h3>二、覆盖（继承）</h3>
     </div>
     <ol>
         <li>不同的类中</li>
@@ -40,18 +41,19 @@ class Base
 {
 public:
     void post(const char* addr);
-}
+};
+
 class Test: public Base
 {
 public:
     virtual void post(const char* addr);    // 覆盖
-}
+};
 </pre>
 </section>
 
 <section>
     <div class="page-header">
-        <h1>三、隐藏</h1>
+        <h3>三、隐藏</h3>
     </div>
     <ol>
         <li>基于重载（不同的两个类）与覆盖之间（没有virtual关键字）</li>
@@ -65,12 +67,12 @@ class Base
 public:
     void post(const char* addr);
     void get(const char* addr);
-}
+};
 
 class Test: public Base
 {
     void post(const char* addr);                // 没有virtual关键字
     void get(const char* addr, int port);       // 参数不同，不在同一类中
-}
+};
 </pre>
 </section>
