--- a/_posts/2012-11-09-cocos2d-x-notes.textile
+++ b/_posts/2012-11-09-cocos2d-x-notes.textile
@@ -3,11 +3,12 @@ layout: post
 title: Cocos2d-x学习笔记 
 description: Cocos2dx学习笔记
 categories: [archive]
+tags: [cocos2d-x]
 ---
 
 <section>
     <div class="page-header">
-        <h1>一、RotateWorldTest</h1>
+        <h3>一、RotateWorldTest</h3>
     </div>
     <p>这是一个旋转动画效果</p>
 <pre class="prettyprint">
