--- a/pages/language/java/spring.textile
+++ b/pages/language/java/spring.textile
@@ -1,23 +1,17 @@
 ---
 layout: default
-title: Spring (业务层框架)
+title: Spring
+description: 业务层框架
+date: 2012-11-29
 ---
 
-<div id="charpter">
+<section>
+    <div class="page-header">
+        <h3>一、HelloWorld</h3>
+    </div>
 
-h3. Spring
-
-</div>
-
-h1. Spring
-
-h3(#1). *HelloWorld* %(title)HelloWorld%
-<hr />
-
-*(1#101) 创建业务类 %(title)业务类%
-<hr />
-
-<pre class="brush: java">
+    <h4>创建业务类</h4>
+<pre class="prettyprint">
 /**
  * GreetingService
  */
@@ -35,10 +29,8 @@ public class GreetingService {
 }
 </pre>
 
-*(1#102) 创建配置文件applicationContext.xml %(title)配置文件%
-<hr />
-
-<pre class="brush: java">
+    <h4>创建配置文件 <small>applicationContext.xml</small></h4>
+<pre class="prettyprint">
 <?xml version="1.0" encodeing="utf-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -54,10 +46,8 @@ public class GreetingService {
 </beans>
 </pre>
 
-*(1#103) 运行 %(title)运行%
-<hr />
-
-<pre class="brush: java">
+    <h4>运行</h4>
+<pre class="prettyprint">
 public static void main(String[] args) {
     //应用上下文
     ApplicationContext ac = new ClassPathXmlApplicationContext("applicationContext.xml");
@@ -65,15 +55,16 @@ public static void main(String[] args) {
     gs.sayGreeting();
 }
 </pre>
+</section>
 
-h3(#2). *IOC控制反转* inverse of control 获得依赖对象的方式被反转了 %(title)IOC控制反转%
-<hr />
+<section>
+    <div class="page-header">
+        <h3>二、IOC控制反转 <small>inverse of control 获得依赖对象的方式被反转了</small></h3>
+    </div>
 
-* 1.对象的实例化由spring完成
-* 2.组装对象时候的出发点是反的，传统方式是自上而下，按部就班的。set属性
-<hr />
-
-<pre class="brush: java">
+    <h4>1.对象的实例化由spring完成</h4>
+    <h4>2.组装对象时候的出发点是反的，传统方式是自上而下，按部就班的。set属性</h4>
+<pre class="prettyprint">
 A a = new A();
 B b = new B();
 // 依赖A
@@ -85,11 +76,8 @@ D d = new D();
 // 依赖C
 d.setC(c);
 </pre>
-
-* 3.spring是自下而上的，从最想要的bean出发，顺藤摸瓜的。ref属性
-<hr />
-
-<pre class="brush: xml">
+    <h4>3.spring是自下而上的，从最想要的bean出发，顺藤摸瓜的。ref属性</h4>
+<pre class="prettyprint">
 <bean id="a" class="A" />
 <bean id="b" class="B">
     <property name="a">
@@ -107,23 +95,31 @@ d.setC(c);
     </property>
 </bean>
 </pre>
+    <h4>4.DI dependencey injection 依赖注入。</h4>
+</session>
 
-* 4.DI dependencey injection 依赖注入。
+<section>
+    <div class="page-header">
+        <h3>三、BeanFactory <small>功能简单，只有DI的功能</small></h3>
+    </div>
+    <h4><small>3.1</small> Bean加载方式：</h4>
+<pre>
+延迟加载，延迟加载所有的Bean，直到getBean()才实例化。
+</pre>
+</section>
 
-h3(#3). BeanFactory 功能简单，只有DI的功能 %(title)BeanFactory%
-<hr />
+<section>
+    <div class="page-header">
+        <h3>四、ApplicationContext <small>应用上下文，建立在BeanFactory之上，除了DI外还有系统架构的服务。</small></h3>
+    </div>
+</section>
 
-* bean加载：延迟加载，延迟加载所有的Bean，直到getBean()才实例化。
-
-h3(#4). ApplicationContext应用上下文 建立在BeanFactory之上，除了DI外还有系统架构的服务。 %(title)ApplicationContext%
-<hr />
-
-* bean加载：只加载scope="singleton"，getBean的时候不需要等待加载时间，不加载scope="prototype"。
-
-* 单例Bean
-<hr />
-
-<pre class="brush: xml">
+    <h4><small>4.1</small> Bean加载方式：</h4>
+<pre>
+只加载scope="singleton"属性的bead，getBean的时候不需要等待加载时间，不加载scope="prototype"属性的bean。
+</pre>
+    <h4><small>4.2</small> 单例Bean：</h4>
+<pre class="prettyprint">
 <!-- 默认是singleton -->
 <bean .. scope="singleton" />
 <!--
@@ -136,18 +132,20 @@ scope范围:
 -->  
 </pre>
 
-* 加载配置文件的方式
-<hr />
-** ClassPathXmlApplicationContext：  com/linguofeng/applicationContext.xml
-** FileSystemXmlApplicationContext： c:\\applicationContext.xml
-** XmlWebApplicationContext：        从web路径中加载，三大框架整合是用到
+    <h4><small>4.3</small> 加载配置文件的方式：</h4>
+<pre>
+ClassPathXmlApplicationContext：  com/linguofeng/applicationContext.xml 包路径
+FileSystemXmlApplicationContext： c:\\applicationContext.xml 绝对路径
+XmlWebApplicationContext：        从web路径中加载，三大框架整合是用到
+</pre>
+</section>
 
-h3(#5). Bean的生命周期 %(title)Bean的生命周期%
-<hr />
+<section>
+    <div class="page-header">
+        <h3>五、Bean的生命周期</h3>
+    </div>
 
-*(5#501) Bean的实例过程 %(title)Bean实例过程%
-<hr />
-
+    <h4><small>5.1</small> Bean的实例过程</h4>
 <pre>
 第1步：Constructor 实例
 第2步：DI 依赖注入，调用setXxx()方法，方法调用顺序与applicationContext.xml中配置顺序一致。
@@ -188,9 +186,7 @@ Bean的销毁：
     ClassPathXmlApplicationContext.destroy();
 </pre>
 
-*(5#502) Bean的装配 %(title)Bean的装配%
-<hr />
-
+    <h4><small>5.2</small> Bean的装配</h4>
 <pre>
     1.<bean id="" class="" />
     2.简单值：<property name="" vaule="" />
@@ -201,10 +197,8 @@ Bean的销毁：
         </property>
 </pre>
      
-*(5#503) 集合装配 %(title)集合装配%
-<hr />
-
-<pre class="brush: xml">
+    <h4><small>5.3</small> 集合装配</h4>
+<pre class="prettyprint">
 <!-- List：ArrayList -->
 <property name="nums">
     <list>
@@ -226,7 +220,7 @@ Bean的销毁：
 <property name="list" ref="myList" />
 </pre>
 
-<pre class="brush: xml">
+<pre class="prettyprint">
 <!-- Set：LinkedHashSet -->
 <property name="set">
     <set>
@@ -247,7 +241,7 @@ Bean的销毁：
 <property name="set" ref="mySet" />
 </pre>
 
-<pre class="brush: xml">    
+<pre class="prettyprint">    
 <!-- Map：LinkedHashMap -->
 <property name="map">
     <map>
@@ -270,7 +264,7 @@ Bean的销毁：
 <property name="map" ref="myMap" />
 </pre>
 
-<pre class="brush: xml">
+<pre class="prettyprint">
 <!-- Properties -->
 <property name="prop">
     <props>
@@ -281,9 +275,7 @@ Bean的销毁：
 </property>
 </pre>
 
-*(5#504) 使用构造函数装配 %(title)构造函数装配%
-<hr />
-
+    <h4><small>5.4</small> 使用构造函数装配</h4>
 <pre>
 <property>：        通过set方法来注入，不保证一定注入上。
 <constructor-arg>： 通过构造函数参数注入，在property节点之上。
@@ -293,10 +285,8 @@ Bean的销毁：
         index：  指定参数的位置
 </pre>
 
-*(5#505) 自动装配 %(title)自动装配%
-<hr />
-
-<pre class="brush: xml">
+    <h4><small>5.5</small> 自动装配</h4>
+<pre class="prettyprint">
 <!--
 使用XML配置自动装配
 default：        默认。
@@ -310,7 +300,7 @@ no：             不使用自动装配。
 <bean id="" class="" autowrie="default" />
 </pre>
 
-<pre class="brush: java">
+<pre class="prettyprint">
 // 使用注解自动装配
 // 使用注解前需要配置自动装配bean后处理器：<bean class="AutowiredAnnotationBeanPostProcessor" />
 @Autowired // 构造函数装配
@@ -327,10 +317,8 @@ public void setAuto(String auto) {
 
 </pre>
 
-*(5#506) 创建Bean的方式之工厂方式 %(title)创建Bean的方式1%
-<hr />
-
-<pre class="brush: xml">
+    <h4><small>5.6</small> 创建Bean的方式之工厂方式</h4>
+<pre class="prettyprint">
 <!-- 方式一、通过工厂的静态方法创建Bean -->
 <bean id="bean" class="BeanFactory" factory-method="getBean" />
 
@@ -339,10 +327,8 @@ public void setAuto(String auto) {
 <bean id="bean" factory-bean="factory" factory-method="getBean" />
 </pre>
 
-*(5#507) 创建Bean的方式之Spring内置工厂接口方式 %(title)创建Bean的方式2%
-<hr />
-
-<pre class="brush: java">
+    <h4><small>5.7</small> 创建Bean的方式之Spring内置工厂接口方式</h4>
+<pre class="prettyprint">
 // 实现FactoryBean接口
 public MyFactoryBean implements FactoryBean {
     // 获取对象
@@ -364,36 +350,35 @@ public MyFactoryBean implements FactoryBean {
 <bean id="student" class="MyFactoryBean" />
 </pre>
 
-*(5#507) Bean的继承关系 %(title)Bean的继承%
-<hr />
+    <h4><small>5.8</small> Bean的继承关系</h4>
+<pre class="prettyprint">
+<!-- 不指定class必须是抽象的 -->
+<bean id="abc" abstract="true">
+    <property name="" value="" />
+</bean>
 
-<pre class="brush: xml">
-    <!-- 不指定class必须是抽象的 -->
-    <bean id="abc" abstract="true">
-        <property name="" value="" />
-    </bean>
+<bean id="parent" class="Parent">
+    <property name="id" value="1" />
+    <property name="name" value="haha" />
+</bean>
 
-    <bean id="parent" class="Parent">
-        <property name="id" value="1" />
-        <property name="name" value="haha" />
-    </bean>
-    
-    <!-- parent="parent"：继承id=parent为bean -->
-    <bean id="child" parent="parent" class="Child">
-        <!-- 覆盖父的id值 -->
-        <property name="id" value="2" />
-    </bean>
-    
-    <!-- Bean继承的是配置内容，与类的继承没有关系。 -->
+<!-- parent="parent"：继承id=parent为bean -->
+<bean id="child" parent="parent" class="Child">
+    <!-- 覆盖父的id值 -->
+    <property name="id" value="2" />
+</bean>
+
+<!-- Bean继承的是配置内容，与类的继承没有关系。 -->
 </pre>
+</section>
 
-h3(#6). 分散配置 %(title)分散配置%
-<hr />
+<section>
+    <div class="page-header">
+        <h3>六、分散配置</h3>
+    </div>
 
-*(6#601) 外部配置 %(title)外部配置%
-<hr />
-
-<pre class="brush: xml">
+    <h4><small>6.1</small> 外部配置</h4>
+<pre class="prettyprint">
 <!-- 属性占位符 -->
 <bean class="PropertyPlaceholderConfigurer">
     <property name="location" value="classpath:com/linguofeng/jdbc.porperties" />
@@ -405,10 +390,8 @@ ${key}
 <context:property-placeholder location="classpath:com/linguofeng/jdbc.porperties" />
 </pre>
 
-*(6#602) 属性编辑器 %(title)属性编辑器%
-<hr />
-
-<pre class="brush: java">
+    <h4><small>6.2</small> 属性编辑器</h4>
+<pre class="prettyprint">
 // 能够以<value>方式装配bean类型的属性
 // 自定义编辑器
 class Edit extends PropertyEditorSupport {
@@ -429,6 +412,7 @@ class Edit extends PropertyEditorSupport {
     </property>
 </bean>
 </pre>
+</section>
 
 h3(#7). AOP 面向切面编程 %(title)AOP%
 <hr />
