--- a/pages/favorites/eclipse.textile
+++ b/pages/favorites/eclipse.textile
@@ -1,16 +1,20 @@
 ---
-layout: default
+layout: page
 title: Eclipse插件
 description: 记录下工作中使用的一些常用插件！！
+update: 2012-12-06
 ---
 
-** 2012-08-09 » "*Zen Coding*":https://github.com/sergeche/eclipse-zencoding 快速编写HTML＋CSS代码的插件。
-
-<pre>
-输入：div#page>div.logo+ul#navigation>li*5>a 然后按一下Tab键，奇迹将出现 >>
-</pre>
-
-<pre class="prettyprint linenums">
+<section>
+<h4 style="font-weight:normal;">
+    <small>2012-08-09 » </small>
+    <a href="https://github.com/sergeche/eclipse-zencoding">*Zen Coding*</a>
+    快速编写HTML＋CSS代码的插件。
+    <a href="#zen-coding" data-toggle="collapse" style="font-size: 12px;">&crarr;</a>
+</h4>
+<div id="zen-coding" class="collapse" style="padding: 0px; margin: 0px;">
+    <div class="lgf-command">div#page>div.logo+ul#navigation>li*5>a &lt;Tab&gt;</div>
+<pre class="prettyprint">
 <div id="page">
     <div class="logo"></div>
     <ul id="navigation">
@@ -22,15 +26,29 @@ description: 记录下工作中使用的一些常用插件！！
     </ul>
 </div>
 </pre>
+</div>
 
-** 2012-08-09 » "*m2e-android*":http://rgladwell.github.com/m2e-android 使用Maven开发Android应用的插件。
-
+<h4 style="font-weight:normal;">
+    <small>2012-08-09 » </small>
+    <a href="http://rgladwell.github.com/m2e-android">*m2e-android*</a>
+    使用Maven开发Android应用的插件。
+    <a href="#m2e-android" data-toggle="collapse" style="font-size: 12px;">&crarr;</a>
+</h4>
+<div id="m2e-android" class="collapse" style="padding: 0px; margin: 0px;">
 <pre>
 Eclipse -> Help -> Install New Software -> Work with：http://rgladwell.github.com/m2e-android/updates/master
 </pre>
+</div>
 
-** 2012-08-16 » "*ScalaIDE*":http://scala-ide.org Scala开发插件
-
+<h4 style="font-weight:normal;">
+    <small>2012-08-16 » </small>
+    <a href="http://scala-ide.org">*ScalaIDE*</a>
+    Scala开发插件。
+    <a href="#scala-ide" data-toggle="collapse" style="font-size: 12px;">&crarr;</a>
+</h4>
+<div id="scala-ide" class="collapse" style="padding: 0pd; margin: 0px;">
 <pre>
 Eclipse -> Help -> Install New Software -> Work with：http://download.scala-ide.org/releases-29/stable/site
 </pre>
+</div>
+</section>
