--- a/pages/tools/vim.textile
+++ b/pages/tools/vim.textile
@@ -1,7 +1,8 @@
 ---
-layout: default
+layout: page
 title: Vim
 description: 很强大的文本编辑器
+update: 2012-12-06
 ---
 
 <section>
@@ -88,7 +89,7 @@ $ git clone https://github.com/scrooloose/nerdtree.git
 <p>@:Helptags@ 生成帮助文档</p>
 <p>@:help NERD_tree.txt@ 查看帮助文档</p>
 
-	<p>插件安装</p>
+    <p>插件安装</p>
 <pre>
 $ mkdir ~/.vim && cd ~/.vim
 $ git init
@@ -105,37 +106,42 @@ runtime bundle/vim-pathogen/autoload/pathogen.vim
 call pathogen#infect()
 </pre>
 
-	<p>@bufexplorer@</p>
+    <p>@bufexplorer@</p>
 <pre>
 $ git submodule add https://github.com/vim-scripts/bufexplorer.zip.git bundle/bufexplorer
 $ git add .
 $ git commit -m 'install bufexporer plugin'
 </pre>
 
-	<p>@生成插件文档@</p>
+    <p>@生成插件文档@</p>
 <pre>
-$ vim >> :Helptags	# 启动vim后执行Helptags命令
+$ vim >> :Helptags  # 启动vim后执行Helptags命令
+$ vim ~/.vim/.gitmodules
+>>  [submodule "bundle/vim-pathogen"]
+>>      path = bundle/vim-pathogen
+>>      url = git://github.com/tpope/vim-pathogen.github
+>>      ignore = untracked      // 添加此项不提交生成的帮助文件
 </pre>
 
-	<p>@升级插件@</p>
+    <p>@升级插件@</p>
 <pre>
 $ cd ~/.vim/bundle/xxx && git pull origin master                # 更新某个插件
-$ cd ~/.vim/ && git submodule foreach git pull origin master	# 更新所有插件
+$ cd ~/.vim/ && git submodule foreach git pull origin master    # 更新所有插件
 </pre>
 
-	<p>@删除插件@</p>
+    <p>@删除插件@</p>
 <pre>
 $ cd ~/.vim && git rm bundle/xxx
 </pre>
 
-	<p>@同步到github@</p>
+    <p>@同步到github@</p>
 <pre>
 $ git add .
 $ git commit -m '添加插件'
 $ git push origin master
 </pre>
 
-	<p>@同步到另一台电脑@</p>
+    <p>@同步到另一台电脑@</p>
 <pre>
 $ git clone git@github.com:linguofeng/vim.git ~/.vim
 $ ln -s ~/.vim/vimrc ~/.vimrc
@@ -144,28 +150,28 @@ $ git submodule init
 $ git submodule update
 </pre>
 
-	<p>@cscope@</p>
+    <h4>安装cscope与vim插件</h4>
 <pre>
 $ sudo apt-get install cscope
 $ curl -so ~/.vim/bundle/cscope/plugin/cscope_maps.vim http://cscope.sourceforge.net/cscope_maps.vim
 $ cscope -Rbkq ~/test/vimtest/zombie_game # 此时在zombie_game文件夹中生成cscope.out文件
-$ gvim 						# 启动gvim(下面都是vim命令)
-	:pwd					# 查看当前vim的工作目录
-	:cd ~/workspace			# 改变当前vim的工作目录为workspace
-	:cs add ~/test/vimtest/zombie_game/cscope.out ~/test/vimtest/zombie_game	# 添加cscope.out到cscope数据库中，对应路径，否则会出现找不到文件的错误。
-	:cs show				# 查看已经连接的数据库
-	:cs kill cscope.out		# 断开已经连接的数据库
-	:cs f g symbol			# 对应快捷键 Ctrl+]
-<p>@Ctrl+]@ :进入这个函数</p>
-<p>@Ctrl+O@ :返回搜索前的位置</p>
+$ gvim                      # 启动gvim(下面都是vim命令)
+    :pwd                    # 查看当前vim的工作目录
+    :cd ~/workspace         # 改变当前vim的工作目录为workspace
+    :cs add ~/test/vimtest/zombie_game/cscope.out ~/test/vimtest/zombie_game    # 添加cscope.out到cscope数据库中，对应路径，否则会出现找不到文件的错误。
+    :cs show                # 查看已经连接的数据库
+    :cs kill cscope.out     # 断开已经连接的数据库
+    :cs f g symbol          # 对应快捷键 Ctrl+]
 </pre>
+ <p>@Ctrl+]@ :进入这个函数</p>
+ <p>@Ctrl+T@ :返回搜索前的位置</p>
 
-	<p>生成工程的cscope.files</p>
+    <h4>生成工程的cscope.files</h4>
 <pre>
-:cd /path/to/project												# 切换当前vim工作目录为工程目录
-:!find . -name '*.h' -o -name '*.c' -o -name '*.cpp' > cscope.files	# 搜索当前目录下所有.h、.c、.cpp文件并生成cscope.files文件列表
-:!cscope -b															# 根据cscope.files生成cscope.out数据库文件
-:cs add cscope.out .												# 连接cscope.out数据库
+:cd /path/to/project                                                # 切换当前vim工作目录为工程目录
+:!find . -name '*.h' -o -name '*.c' -o -name '*.cpp' > cscope.files # 搜索当前目录下所有.h、.c、.cpp文件并生成cscope.files文件列表
+:!cscope -b                                                         # 根据cscope.files生成cscope.out数据库文件
+:cs add cscope.out .                                                # 连接cscope.out数据库
 </pre>
 </section>
 
@@ -195,4 +201,25 @@ option: 参数，省略时显替换第一个匹配的词
     i:      不区分大小写
     e:      不显示error
 </pre>
+    
+    <h4><small>3.2</small> 去掉^M字符</h4>
+<div class="lgf-command">:%s/^M//g</div>
+<pre class="lgf-command-description">
+^M是由 Ctrl-V + Ctrl-M 生成的。
+</pre>
+
+    <h4><small>3.3</small> tab替换成空格 <small>http://vim.wikia.com/wiki/Converting_tabs_to_spaces</small></h4>
+<div class="lgf-command">
+:set tabstop=4
+:set shiftwidth=4
+:set expandtab
+:retab
+</div>
+<pre class="lgf-command-description">
+tabstop     tab键的宽度
+shiftwidth  换行时使用4个空格
+expandtab   使用空格替换tab
+retab       把所有tab替换成tabstop宽度的空格
+</pre>
+
 </section>
