--- a/pages/language/go.textile
+++ b/pages/language/go.textile
@@ -1,13 +1,16 @@
 ---
-layout: default
+layout: page
 title: Go
 description: http://golang.org/
+navigation: [1.安装, 2.Hello World, 3.开发环境配置, 4.基础知识, 5.流程与函数]
+update: 2013-01-12
 ---
 
 <section id="1">
   <div class="page-header">
-    <h1>安装</h1>
+    <h3>一、安装</h3>
   </div>
+  <h4><small>1.1</small> -Ubuntu-</h4>
 <p>下载地址： "https://code.google.com/p/go/downloads/list":https://code.google.com/p/go/downloads/list</p>
 <pre>
 $ sudo tar -C /usr/local -xzf go1.0.3.linux-386.tar.gz
@@ -21,11 +24,46 @@ $ mkdir $HOME/workspace/gocode/bin    # 编译后的可执行文件存放目录
 export GOPATH="$HOME/workspace/gocode"            # 工作目录
 export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin   # go安装目录，编译后生成的可执行文件目录
 </pre>
+
+    <h4><small>1.2</small> -OS X-</h4>
+<pre>
+$ brew install go
+$ mkdir -p $HOME/work/golang/{bin,pkg,src}
+$ vim $HOME/.zshrc
+</pre>
+<pre>
+export GOPATH="$HOME/work/golang"
+export PATH=$PATH:$GOPATH/bin
+</pre>
+
+    <h4><small>1.3</small> 安装Go中文指南</h4>
+<pre>
+$ go get bitbucket.org/mikespook/go-tour-zh/gotour
+$ gotour
+</pre>
+
+    <h4><small>1.4</small> 通过gvm来进行安装与多版本共享管理</h4>
+<pre>
+$ bash < <(curl -s https://raw.github.com/moovweb/gvm/master/binscripts/gvm-installer)
+$ vim .zshrc
+    [[ -s "$HOME/.gvm/scripts/gvm" ]] && source "$HOME/.gvm/scripts/gvm"
+$ gvm install go1.0.3
+$ gvm use go1.0.3 [--default]
+$ echo $GOROOT
+$ echo $GOPATH
+</pre>
+    <p>Gvm官网: @https://github.com/moovweb/gvm@</p>
+
+    <h4><small>1.5</small> 安装gocode结合vim开发IDE</h4>
+<pre>
+$ go get -u github.com/nsf/gocode
+</pre>
+    <p>Gocode官网: @https://github.com/nsf/gocode@</p>
 </section>
 
 <section id="2">
   <div class="page-header">
-    <h1>Hello World</h1>
+    <h1>二、Hello World</h1>
   </div>
 <pre>
 $ mkdir $GOPATH/src/helloworld            # 创建helloworld工程目录
@@ -50,7 +88,7 @@ $ helloworld                # 运行helloworld工程
 
 <section id="3">
     <div class="page-header">
-        <h1>三、基础</h1>
+        <h1>三、基础知识</h1>
     </div>
 
     <h3><small>3.1</small> 变量的定义</h3>
