--- a/pages/language/lua.textile
+++ b/pages/language/lua.textile
@@ -1,20 +1,23 @@
 ---
-layout: default
+layout: page
 title: Lua
-description: 运行于JVM虚拟机的语言，能够与JAVA相互调用！！
-navigation: [1.安装, 2.HelloWorld, 3.函数]
+description: 简洁、轻量、可扩展的脚本语言
+navigation: [1.安装, 2.HelloWorld, 3.数据类型, 4.函数]
+update: 2013-01-17
 ---
 
 <section id="1">
     <div class="page-header">
-        <h3>一、安装 <small>环境：Ubuntu 12.10</small></h3>
+        <h3>一、安装</h3>
     </div>
+    <h4><small>1.1</small> Ubuntu</h4>
 <pre>
 $ sudo apt-get install lua5.2
-$ lua -v
 </pre>
+    <h4><small>1.2</small> OS X</h4>
 <pre>
-Lua 5.2.1  Copyright (C) 1994-2012 Lua.org, PUC-Rio
+$ brew tap homebrew/versions
+$ brew install lua52
 </pre>
 </section>
 
@@ -33,19 +36,45 @@ Hello World!!
 
 <section id="3">
     <div class="page-header">
-        <h3>三、函数</h3>
+        <h3>三、数据类型 <small>有8种基本数据类型</small></h3>
     </div>
-<pre class="">
-function add(x, y)          // 定义一个函数add，并接收两个参数
-    local a = x + y         // 定义一个局部变量a，接收x+y的和，局部变量仅在函数add中有效
-    return a                // 返回
-end                         // 结束add函数
 
-print(add(15, 64));         // 打印add(15, 64)的结果
+table(table table-bordered).
+|_.类型|_.说明|
+|nil||
+|boolean|布尔值|
+|number|数字型|
+|string|字符串型|
+|userdata|用户自定义类型|
+|function|函数|
+|thread|线程|
+|table|表|
+
+<pre>
+print(type(nil))                    -- 输出 nil
+print(type(99.7+12*9))              -- 输出 number
+print(type(true))                   -- 输出 boolean
+print(type("Hello Wikipedia"))      -- 输出 string
+print(type(print))                  -- 输出 function
+print(type{1, 2, test = "test"})    -- 输出 table
 </pre>
 </section>
 
 <section id="4">
+    <div class="page-header">
+        <h3>三、函数</h3>
+    </div>
+<pre class="">
+function add(x, y)                          // 定义一个函数add，并接收两个参数
+    local a = x + y                         // 定义一个局部变量a，接收x+y的和，局部变量仅在函数add中有效
+    return a                                // 返回
+end                                         // 结束add函数
+
+print("15 + 64 = " .. add(15, 64));         // 打印add(15, 64)的结果
+</pre>
+</section>
+
+<section id="5">
     <div class="page-header">
         <h3>四、控制语句</h3>
     </div>
@@ -62,7 +91,7 @@ end
 </pre>
 </section>
 
-<section id="5">
+<section id="6">
     <div class="page-header">
         <h3>五、数据结构 <small>table</small></h3>
     </div>
