--- a/_posts/2013-01-04-android-get-status-bar-height.textile
+++ b/_posts/2013-01-04-android-get-status-bar-height.textile
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Android中获取状态栏的高度
-description: C++的动态内存管理之new关键字
+description: Android中获取状态栏的高度
 categories: [archive]
 tags: [android]
 ---
@@ -27,56 +27,3 @@ public static int GetStatusBarHeight() {
     return statusBarHeight;
 }   
 </pre>
-<pre class="prettyprint">
-#include <iostream>
-
-int main()
-{
-    try
-    {
-        int *pInt = new int();
-    }
-    catch (std::bad_alloc e)
-    {
-        // new申请内存失败时会抛出bad_alloc异常，而malloc不会
-    }
-    return 0;
-}
-</pre>
-
-    <h4><small>1.2</small> nothrow</h4>
-<pre class="prettyprint">
-#include <iostream>
-#include <new>
-
-int main()
-{
-    int *pInt = new (std::nothrow)int();
-    if (pInt == NULL)
-    {
-        std::cout << "申请内存失败";
-    }
-    return 0;
-}
-</pre>
-
-    <h4><small>1.3</small> new_handler</h4>
-<pre class="prettyprint">
-#include <iostream>
-#include <cstdlib>
-#include <new>
-
-void __cdecl newhandler()
-{
-    std::cout << "申请内存失败";
-    exit(0);
-}
-
-int main()
-{
-    std::set_new_handler(newhandler);
-    int *pInt = new int();          // 如果申请内存失败则调用newhandler()函数。
-    return 0;
-}
-</pre>
-</section>
