--- a/pages/exception/cocos2d-x.textile
+++ b/pages/exception/cocos2d-x.textile
@@ -11,7 +11,7 @@ update: 2013-03-06
   </div>
 
 <p>@$ vim $COCOS2DX_ROOT/cocos2dx/platform/android/java/src/org/cocos2dx/lib/Cocos2dxGLSurfaceView.java@</p>
-<pre class="prettyprint">
+<pre class="prettyprint linenums">
 public Cocos2dxGLSurfaceView(final Context context) {
     super(context);
 
